crates/uselesskey-jsonwebtoken/tests/snapshots/snapshots_jwt__ecdsa_snapshots__ecdsa_es256_round_trip.snap
---
source: crates/uselesskey-jsonwebtoken/tests/snapshots_jwt.rs
assertion_line: 104
expression: result
---
algorithm: ES256
token_parts: 3
token_header_len: 36
claims_sub: user-ec
claims_iss: snapshot-ecdsa
roundtrip_ok: true
